--- a/README.org
+++ b/README.org
@@ -9,27 +9,31 @@
   lein figwheel
   #+END_EXAMPLE
 
-  After starting the server, connect your browser to http://localhost:3449/index.html. Happy chatting.
+  After starting the server, connect your browser to [[http://localhost:3449/index.html][http://localhost:3449/index.html]]. Happy chatting.
 
 ** What's Next
 
    - Allow additional clients to connect.
    - Style the chat window
 
-** Learning Resources
+** Resources
 
 *** General ClojureScript
 
-    - http://lukevanderhart.com/2011/09/30/using-javascript-and-clojurescript.html
-    - http://www.spacjer.com/blog/2014/09/12/clojurescript-javascript-interop/
+    - [[http://lukevanderhart.com/2011/09/30/using-javascript-and-clojurescript.html][http://lukevanderhart.com/2011/09/30/using-javascript-and-clojurescript.html]]
+    - [[http://www.spacjer.com/blog/2014/09/12/clojurescript-javascript-interop/][http://www.spacjer.com/blog/2014/09/12/clojurescript-javascript-interop/]]
 
 *** ClojureScript Development Environment
 
-    - https://github.com/plexus/chestnut
-    - https://github.com/bensu/doo
-    - https://github.com/emezeske/lein-cljsbuild
+    - [[https://github.com/plexus/chestnut][https://github.com/plexus/chestnut]]
+    - [[https://github.com/bensu/doo][https://github.com/bensu/doo]]
+    - [[https://github.com/emezeske/lein-cljsbuild][https://github.com/emezeske/lein-cljsbuild]]
 
 *** Reagent
 
-    - https://github.com/reagent-project/reagent
-    - https://github.com/jonase/reagent-tutorial
+    - [[https://github.com/reagent-project/reagent][https://github.com/reagent-project/reagent]]
+    - [[https://github.com/jonase/reagent-tutorial][https://github.com/jonase/reagent-tutorial]]
+
+*** HTTP Kit
+
+    - [[http://www.http-kit.org/][http://www.http-kit.org/]]
