--- a/README.org
+++ b/README.org
@@ -16,12 +16,14 @@
 
 ** What's Next
 
-   - Style the chat window
+   - Use a schema to validate app-state
    - Understand what tests should be written and write them
    - Deploy
    - Add persistence
    - Add typing notification
-   - Use a schema to validate app-state
+   - Add current number of users information
+   - Style the window better
+   - +Style the chat window+
    - +Set up a build on [[https://travis-ci.org/][Travis CI]]+
    - +Allow additional clients to connect+
 
